--- a/src/Assignment-3/assignment3.html
+++ b/src/Assignment-3/assignment3.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Iframe</title>
 	<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
 	<meta http-equiv="Pragma" content="no-cache" />
 	<meta http-equiv="Expires" content="0" />
@@ -10,10 +10,29 @@
 
 <body>
 	<div id="container">
+		<div class="three-cont first">
+			<div class="content">
+				<h1>Your Best Value Proposition</h1>
+				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
+				<button class="btn">Start free Trail</button>
+			</div>
+			<div class="content">
+				<iframe id="render-wiki" src="https://www.wikipedia.org/"></iframe>
+			</div>
+			
+		</div>
+		<div class="three-cont second">
+			<div class="">
+				<h1>Your Best Value Proposition</h1>
+				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
+				<button class="btn">Start free Trail</button>
+			</div>
 
-	<!-- Start your code from here -->
-	
-	<!-- End your code -->
+			
+		</div>
+		<div class="three-cont second">
+			<iframe id="render-dictionary" src="https://www.dictionary.com/"></iframe>
+		</div>
 
 	</div>
 </body>
